Egin dena: +Testua responsive egin da testua justifikatuz +FTP html-a amaitu egin da +Akats gramatiko batzuk zuzendu dira +Bisitatuen html-an argazkiak gehitu dira +Nabigazioa zuzendu da +Komentarioak gehitu dira

--- a/Bistaratuenak.html
+++ b/Bistaratuenak.html
@@ -31,27 +31,27 @@
     <div class="row">
         
         <div class="card card1">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Media/Bistaratuenak/bisitatuenak1.png" class="card-img-top" alt="Github lehen pausuak">
             <div class="card-body">
-            <h5 class="card-title">Orrialde bistaratuena 1</h5>
-            <p class="card-text">Textito to brutal para explicar un poco esto.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">GitHub</h5>
+            <p class="card-text">GIT-HUB zer den, zergatik erabiliko dugun eta hau instalatzeko eta erabiltzeko lehen pausuak azalduko dira.</p>
+            <a href="GitHub.html" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
         <div class="card card2">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Media/Bistaratuenak/bisitatuenak2.png" class="card-img-top" alt="FreeNas lehen pausuak">
             <div class="card-body">
-            <h5 class="card-title">Orrialde bistaratuena 2</h5>
-            <p class="card-text">Textito to brutal para explicar un poco esto</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">FreeNas</h5>
+            <p class="card-text">FreeNAS zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira, hala nola, hardware baldintzak, non deskargatu, nola instalatu, lehen pausoen tutoriala, enkriptazioa eta backUp zerbitzuak beste atal askoren artean.</p>
+            <a href="FreeNas2.html" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
         <div class="card card3">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Media/Bistaratuenak/bisitatuenak3.png" class="card-img-top" alt="DNS lehen pausuak">
             <div class="card-body">
-            <h5 class="card-title">Orrialde bistaratuena 3</h5>
-            <p class="card-text">Textito to brutal para explicar un poco esto</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">DNS</h5>
+            <p class="card-text">DNS-a zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira.</p>
+            <a href="DNS" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
     </div>
