--- a/Debian.html
+++ b/Debian.html
@@ -19,7 +19,7 @@
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
                             <a href="Bistaratuenak.html">BISITATUENAK</a>
-                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas2.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -60,7 +60,7 @@
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
                         <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Debianen oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
                             <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Debianen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
-                                <p><a href="https://www.debian.com/doc/">https://www.debian.com/doc/</a></p>
+                                <p><a href="https://www.debian.com/doc/" id="deskarga">https://www.debian.com/doc/</a></p>
                     </div>
             </div>
         </div>
