--- a/Debian2.html
+++ b/Debian2.html
@@ -19,7 +19,7 @@
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
                             <a href="Bistaratuenak.html">BISITATUENAK</a>
-                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas2.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -32,10 +32,10 @@
                     <a href="SSH.html">SSH</a>
                     <a href="FTP.html">FTP</a>
                     <a href="Proxmox.html">Proxmox</a>
-                    <a href="GitHub.html" class="active">GitHub</a>
+                    <a href="GitHub.html" >GitHub</a>
                     <a href="FreeNas2.html">FreeNas</a>
                     <a href="DNS.html">DNS</a>
-                    <a href="Debian.html">Debian</a>
+                    <a href="Debian.html" class="active">Debian</a>
                     <a href="ApacheEtaMysql.html">Apache eta MySql</a>
                     <a href="ApacheEtaMysql.html">»</a>
                 </div>
