--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -19,7 +19,7 @@
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
                             <a href="Bistaratuenak.html">BISITATUENAK</a>
-                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas2.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="articulo1">
                     <h1>FREENAS</h1>
                         <h3>HARDWARE BALDINTZAK</h3>
-                            <p>&nbsp FreeNAS doako eta open source’-ko Network Attached Storage (NAS) software bat da FreeBSD-an 
+                            <p>&nbsp&nbspFreeNAS doako eta open source’-ko Network Attached Storage (NAS) software bat da FreeBSD-an 
                                 (x86, Intel 80386 eta Intel 80486-ko arkitekturatan oinarruta dagoen ‘open source’-ko sistema eragile bat da). 
                                 FreeNAS-ak 64-bit x86-ko ia edozein PC edo makina birtualean hasieratuko da baina, hardware zuzen bat aukeratzea 
                                 oso garrantzitsua da FreeNAS-ak egiten duen bete behar garrantzitsuena egiten uzteko: zure informazioa babestu.</p>
