--- a/FreeNas4.html
+++ b/FreeNas4.html
@@ -19,7 +19,7 @@
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
                             <a href="Bistaratuenak.html">BISITATUENAK</a>
-                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas2.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -55,25 +55,27 @@
                     <h1>FREENAS</h1>
                         <h3>INSTALAZIOA PROXMOXEAN</h3>
                             <ol id="pausuak">
-                                <li>&nbsp ISO-a behin deskargatu ostean, “upload” botoia sakatuko dugu eta ISO-a aurkeratuko dugu. ADI! Prozesu hau minutu batzuk hartu ditzake.</li>
-                                <li>&nbsp Kargatzen denean, MV bat sortuko dugu ISO horrekin.</li>
-                                <li>&nbsp BIOS-era sartu, eta sistema boot-device-a FreeNAS-ekoa aukeratu egingo dugu.</li>
-                                <li>&nbsp Sistema berrabiarazi.</li>
-                                <li>&nbsp FreeNAS-eko instalazio menua pantailan agerraraztean lehenengo aukera (1) aukeratuko dugu instalazioa hasteko.</li>
-                                <li>&nbsp Kontsolako ‘Setup menu’-a kargatzen zaigunean, Install/Upgrade aukeratu.</li>
-                                <li>&nbsp urrengo menuan FreeNAS erabiltzeko ze drive erabiliko den aukeratzeko eskatuko digute. Hemen boot device-a aukeratuko dugu, <b>kontuz, ez “storage disk”-a.</b> Orokorrean boot device-a storagekoa baino tamaina txikiagoa izango du. Nabigatzeko Aukeratzeko espazio barra sakatu. Ondoren OK sakatu.</li>
-                                <li>&nbsp Ondorengo pantailan, “Yes” sakatu instalazioarekin jarraitu ahal izateko.</li>
-                                <li>&nbsp Jarraian FreeNAS-era sartzeko erabiliko dugun pasahitza sartzeko eskatuko digute.</li>
-                                <li>&nbsp FreeNAS Boot Mode menu pantailarekin topatzen garenean Boot via BIOS aukeratuko dugu (orokorrean ‘motherboard’ guztiekin funtzionatzen baitu eta Hardware zaharragoarekin be).</li>
-                                <li>&nbsp Gure instalazioa hasiko da, eta minutu gutxi batzuk beharko ditu hau bukatzeko.</li>
-                                <li>&nbsp OK sakatu sistema berrabiarazteko eta gero instalazioa egiteko erabili dugun diska edo USB-a kenduko dugu. Adi, sistemak bi aldiz galdetu egingo dizu diska edo USB-a kendu izan duzun edo ez.</li>
-                                <li>&nbsp Sistema berrabiaraziko da Boot device-tik.</li>
-                                <li>&nbsp FreeNAS kargatzen den lehen aldia denez, mezuak agertuko dira pantaila osoan zehar kargatzen den bitartean.</li>
-                                <li>&nbsp Amaitzen denean Console Setup-arekin  topatuko gara IP helbide batekin batera (azken hau 0.0.0.0. baldin bada, interneteko kablea konektatuta dagoela eta DHPC zerbitzari bat duela ziurtatu).</li>
-                                <li>&nbsp Orain beste ordenagailu batean web-arakatzailearen bilatzailean IP helbide hori bilatuko dugu, eta jarraian FreeNAS-eko login menuarekin topatu beharko ginen. “root” erabiltzeailearekin logueatu goiko pausu batean sartu duzun pasahitzarekin.</li>
-                                <li>&nbsp LISTO! FreesNAS instalatu berri duzu.</li>
+                                <li>ISO-a behin deskargatu ostean, “upload” botoia sakatuko dugu eta ISO-a aurkeratuko dugu. ADI! Prozesu hau minutu batzuk hartu ditzake.</li>
+                                <li>Kargatzen denean, MV bat sortuko dugu ISO horrekin.</li>
+                                <li>BIOS-era sartu, eta sistema boot-device-a FreeNAS-ekoa aukeratu egingo dugu.</li>
+                                <li>Sistema berrabiarazi.</li>
+                                <li>FreeNAS-eko instalazio menua pantailan agerraraztean lehenengo aukera (1) aukeratuko dugu instalazioa hasteko.</li>
+                                <li>Kontsolako ‘Setup menu’-a kargatzen zaigunean, Install/Upgrade aukeratu.</li>
+                                <li>Hurrengo menuan FreeNAS erabiltzeko ze drive erabiliko den aukeratzeko eskatuko digute. Hemen boot device-a aukeratuko dugu, <b>kontuz, ez “storage disk”-a.</b> Orokorrean boot device-a storagekoa baino tamaina txikiagoa izango du. Nabigatzeko Aukeratzeko espazio barra sakatu. Ondoren OK sakatu.</li>
+                                <li>Ondorengo pantailan, “Yes” sakatu instalazioarekin jarraitu ahal izateko.</li>
+                                <li>Jarraian FreeNAS-era sartzeko erabiliko dugun pasahitza sartzeko eskatuko digute.</li>
+                                <li>FreeNAS Boot Mode menu pantailarekin topatzen garenean Boot via BIOS aukeratuko dugu (orokorrean ‘motherboard’ guztiekin funtzionatzen baitu eta Hardware zaharragoarekin be).</li>
+                                <li>Gure instalazioa hasiko da, eta minutu gutxi batzuk beharko ditu hau bukatzeko.</li>
+                                <li>OK sakatu sistema berrabiarazteko eta gero instalazioa egiteko erabili dugun diska edo USB-a kenduko dugu. Adi, sistemak bi aldiz galdetu egingo dizu diska edo USB-a kendu izan duzun edo ez.</li>
+                                <li>Sistema berrabiaraziko da Boot device-tik.</li>
+                                <li>FreeNAS kargatzen den lehen aldia denez, mezuak agertuko dira pantaila osoan zehar kargatzen den bitartean.</li>
+                                <li>Amaitzen denean Console Setup-arekin  topatuko gara IP helbide batekin batera (azken hau 0.0.0.0. baldin bada, interneteko kablea konektatuta dagoela eta DHPC zerbitzari bat duela ziurtatu).</li>
+                                <li>Orain beste ordenagailu batean web-arakatzailearen bilatzailean IP helbide hori bilatuko dugu, eta jarraian FreeNAS-eko login menuarekin topatu beharko ginen. “root” erabiltzeailearekin logueatu goiko pausu batean sartu duzun pasahitzarekin.</li>
+                                <li>LISTO! FreesNAS instalatu berri duzu.</li>
+                                <br><br>
+                                <img src="Media/Fotis/Prxm_1.png" id="argazkiaPausoka">
                             </ol>
-                        <img src="Media/Fotis/Prxm_1.png" width="70%">
+                        
                 </div>
             </div>
         </div>
