--- a/Ubuntu.html
+++ b/Ubuntu.html
@@ -19,7 +19,7 @@
                         <div class="navbar">
                             <a href="index.html">HASIERA</a> 
                             <a href="Bistaratuenak.html">BISITATUENAK</a> 
-                            <a class="active" href="FreeNas1.html">ARTIKULUAK</a>
+                            <a class="active" href="FreeNas2.html">ARTIKULUAK</a>
                             <a href="Galderak.html">FAQ</a>
                         </div>
                 </div>
@@ -56,9 +56,9 @@
                         </p>
                         <h3>NOLA DESKARGATU DEZAKET?</h3>
                         <p>&nbsp&nbspPrestatzen ari garen zerbitzaria proxmoxen bidez desplegatuko dugunez, Ubuntun oinarritutako VM bat sortzeko pausuak azalduko dizuegu hurrengo ISO-ak erabiliz:</p>
-                        <p><a href="https://ubuntu.com/download/desktop">https://ubuntu.com/download/desktop</a></p>
+                        <p><a href="https://ubuntu.com/download/desktop" id="deskarga">https://ubuntu.com/download/desktop</a></p>
                         <p>&nbsp&nbsp• &nbsp Informazio gehiagorako Ubunturen dokumentazioa irakurtzea gomendatzen dizuegu:</p>
-                        <p><a href="https://help.ubuntu.com/">https://help.ubuntu.com/</a></p>
+                        <p><a href="https://help.ubuntu.com/" id="deskarga">https://help.ubuntu.com/</a></p>
                     </div>
             </div>
         </div>
