Bistaratuenak responsive y artikuluak tabulados

--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -91,7 +91,7 @@
                                 <li>64-biteko multicore prozesadore bat edo bi.</li>
                                 <li>32GB-eko Operating System Drive-a.</li>
                                 <li>32GB-eko ECC RAM edo gehiago (gehiago gehitzen badira errendimendua.</li>
-                                <li>Drives:</li>
+                                <li>Drivers:</li>
                                     <ul>
                                         <li>16-raino WD Red Pro </li>
                                         <li>16-tik gora WD UltraStar </li>
