--- a/Galderak.html
+++ b/Galderak.html
@@ -40,10 +40,10 @@
                 <!-- Erantzuna -->
                 <div class="erantzuna">
                     <h1>Erantzuna:</h1>
-                    <p><b>Hardware osagaiak: </b>
+                    <p><b>&nbsp&nbsp&nbspHardware osagaiak: </b>
                         Gutxienez behar izango ditugu, Interneteko konexioarekiko bideratzailea (router), zerbitzari weba eta RJ45 sare kableatzea bideratzailea gure ordenagailuarekin konektatzeko ordezkatzen dituen ordenagailua. 
                         
-                        <br><b>Osagai softwareak:</b> Windows Sistema Eragileak edo Linux-ek eta zerbitzaria programatzen duen Apache Server. Web-orri-edizioa egin ahal izateko: Dreamweaver (ordainketako) edo Joomla, WordPress (doakoa), VS Code...
+                        <br><b>&nbsp&nbsp&nbspOsagai softwareak:</b> Windows Sistema Eragileak edo Linux-ek eta zerbitzaria programatzen duen Apache Server. Web-orri-edizioa egin ahal izateko: Dreamweaver (ordainketako) edo Joomla, WordPress (doakoa), VS Code...
                         </p>
                 </div>
                 <!-- Botoiak galdera batetik bestera pasatzeko -->
