--- a/Galderak2.html
+++ b/Galderak2.html
@@ -41,7 +41,7 @@
                     <!-- Erantzuna -->
                     <div class="erantzuna">
                         <h1>Erantzuna:</h1>
-                        <p>Hosting-a, leku bat argitaratzea baimentzen dizun lineako zerbitzua da. 
+                        <p>&nbsp&nbspHosting-a, leku bat argitaratzea baimentzen dizun lineako zerbitzua da. 
                             Hosting-zerbitzuagatik ordaintzen duzunean, alokatzen duzu zerbitzari baten espazioa zure web orria ikustarazteko fitxategi guztiak gorde ditzakezun zuzenki funtziona dezan. 
                             Zerbitzari bat da etengabe zure webgunea libre egon dadin ikusi nahi duen edozein pertsonarentzako denbora guztian funtzionatzen duen konputagailu fisikoa. 
                             Zure hosting-hornitzailea da zerbitzaria funtzionamenduan mantentzeko, hura eraso maleziatsuko babesteko eta zure edukia (testua, irudiak, artxiboak|artxibatzeak) 
