--- a/Galderak3.html
+++ b/Galderak3.html
@@ -41,7 +41,7 @@
                     <!-- Erantzuna -->
                     <div class="erantzuna">
                         <h1>Erantzuna:</h1>
-                        <p>Zerbitzari-espazioa zure lekurako alokatzea hosting hosting-a baimentzen du, 
+                        <p>&nbsp&nbspZerbitzari-espazioa zure lekurako alokatzea hosting hosting-a baimentzen du, 
                             nagusitasuna|domeinua zure lekuaren helbidea|norabidea|zuzendaritza da; adibidez, 
                             gure nagusitasun|domeinu-izena hostinger.es da.
                         </p>
