--- a/Bistaratuenak.html
+++ b/Bistaratuenak.html
@@ -9,6 +9,23 @@
     <link rel="icon" type="image/png" href="Media/fav-icon.png">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <style>
+        /* .card1 {
+            width: 20%;
+            padding: 2%;
+            height: 200px;
+        }
+
+        .row {
+            padding: 2%;
+        }*/
+
+        /* .card-img-top {
+            width: 100%;
+            height: 100%;
+        } */
+    </style>
 </head>
 <body>
     <div class="content">
@@ -38,20 +55,20 @@
             <a href="GitHub.html" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
-        <div class="card card2">
+        <div class="card card1">
             <img src="Media/Bistaratuenak/bisitatuenak2.png" class="card-img-top" alt="FreeNas lehen pausuak">
             <div class="card-body">
             <h5 class="card-title">FreeNas</h5>
-            <p class="card-text">FreeNAS zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira, hala nola, hardware baldintzak, non deskargatu, nola instalatu, lehen pausoen tutoriala, enkriptazioa eta backUp zerbitzuak beste atal askoren artean.</p>
+            <p class="card-text">FreeNAS zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira.</p>
             <a href="FreeNas2.html" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
-        <div class="card card3">
+        <div class="card card1">
             <img src="Media/Bistaratuenak/bisitatuenak3.png" class="card-img-top" alt="DNS lehen pausuak">
             <div class="card-body">
             <h5 class="card-title">DNS</h5>
-            <p class="card-text">DNS-a zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira.</p>
-            <a href="DNS" class="btn btn-primary">Irakurri</a>
+            <p class="card-text">DNS-a zer den, zergatik erabiliko dugun eta hau erabiltzeko lehen pausuak azalduko dira orrialde honetan zehar.</p>
+            <a href="DNS.html" class="btn btn-primary">Irakurri</a>
             </div>
         </div>
     </div>
