Extensiones png en minuscula que en si creo que da igual pero bueno

--- a/DNS.html
+++ b/DNS.html
@@ -84,7 +84,7 @@
                             <img src="Media/DNS/dns7.png" id="argazkiaPausoka"><br>
 
                             <li>Azkenekoz, kapturan agerrarazten den aukera horretan bi klik egingo dugu, eta gure DNS-aren helbidea idatziko dugu.</li>
-                            <img src="Media/DNS/dns8.png" id="argazkiaPausoka"><br>
+                            <img src="Media/DNS/dns8.PNG" id="argazkiaPausoka"><br>
 
                         </ol>   
                     </div>
