--- a/FreeNas2.html
+++ b/FreeNas2.html
@@ -46,7 +46,7 @@
                 <a href="FreeNas2.html" class="active">HARDWARE BALDINTZAK</a>
                 <a href="FreeNas3.html">INSTALAZIOA</a>
                 <a href="FreeNas4.html">INST. PROXMOX</a>
-                <a href="Freenas5.html">SEGURTASUN KOPIAK</a>
+                <a href="FreeNas5.html">SEGURTASUN KOPIAK</a>
 
             </div>
             </div>
