navegacion en proxmox

--- a/Proxmox2.html
+++ b/Proxmox2.html
@@ -43,8 +43,8 @@
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="proxmox.html" >DESKRIBAPENA</a>
-                <a href="proxmox2.html" class="active">MAKINA BIRTUALA SORTU</a>
+                <a href="Proxmox.html" >DESKRIBAPENA</a>
+                <a href="Proxmox2.html" class="active">MAKINA BIRTUALA SORTU</a>
             </div>
             </div>
             <!-- Artikuluak -->
