--- a/Proxmox.html
+++ b/Proxmox.html
@@ -43,8 +43,8 @@
             </div>
             <div class="center2">
             <div class="pagination">
-                <a href="proxmox.html" class="active">DESKRIBAPENA</a>
-                <a href="proxmox2.html">MAKINA BIRTUALA SORTU</a>
+                <a href="Proxmox.html" class="active">DESKRIBAPENA</a>
+                <a href="Proxmox2.html">MAKINA BIRTUALA SORTU</a>
             </div>
             </div>
             <!-- Artikuluak -->
