navegacion en freenas y proxmox

--- a/FreeNas3.html
+++ b/FreeNas3.html
@@ -46,7 +46,7 @@
                 <a href="FreeNas2.html">HARDWARE BALDINTZAK</a>
                 <a href="FreeNas3.html" class="active">INSTALAZIOA</a>
                 <a href="FreeNas4.html">INST. PROXMOX</a>
-                <a href="Freenas5.html">SEGURTASUN KOPIAK</a>
+                <a href="FreeNas5.html">SEGURTASUN KOPIAK</a>
             </div>
             </div>
             <!-- Artikuluak -->
