Server wiki txikikeriak konponduta +Sliderrak konpondu dira +Index-a zuzendu da

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <!-- Radio elementuarekin egiten dugu aukera batekoa delako -->
                 <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
                 <div class="carousel-item">
-                    <img src="/Media/Slider1.PNG">
+                    <a href="ApacheEtaMysql.html"><img src="/Media/slider1.png"></a>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
-                    <img src="/Media/Slider2.PNG">
+                    <a href="Ubuntu.html"><img src="/Media/slider2.png"></a>
                 </div>
                 <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
                 <div class="carousel-item">
-                    <img src="/Media/Slider3.PNG">
+                    <a href="DNS.html"><img src="/Media/slider3.png"></a>
                 </div>
                 <!-- Geziak ikusi ajal izateko slider-aren atal bakoitzean...-->
                 <label for="carousel-3" class="carousel-control prev control-1">‹</label>
